force-app/main/default/objects/MessagingSession/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Text</type>
    <length>80</length>
    <description>The site/brand this chat session is on (Kwitko Coffee | Bean &amp; Brew). Set from the embedded-chat 'brand' parameter via the routing flow; the Concierge reads it as a linked variable to scope product recommendations to the right catalog.</description>
</CustomField>