force-app/main/default/objects/MessagingSession/fields/Brand_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Brand_Catalog__c</fullName>
    <description>Deterministic per-brand catalog (what this store carries and does NOT carry + the complete allowed product list), stamped at session start by MessagingSessionBrandStamp so the Concierge's linked brandCatalog variable bounds what it may offer — preventing the agent from hallucinating products the store does not sell.</description>
    <label>Brand Catalog</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>