force-app/main/default/objects/MessagingSession/fields/Context_Summary__c.field-meta.xml
<CustomField>
    <fullName>Context_Summary__c</fullName>
    <label>Context Summary</label>
    <type>Text</type>
    <length>255</length>
    <description>Compact pre-stamped 360 context for a signed-in shopper, read by the Concierge as a linked variable so authenticated context costs zero Agentforce actions.</description>
</CustomField>