force-app/main/default/objects/MessagingSession/fields/Customer_Brief__c.field-meta.xml
<CustomField>
    <fullName>Customer_Brief__c</fullName>
    <label>Customer Brief</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Rich pre-stamped brief for a signed-in shopper (profile 360 + last order + items + open cases + service visits + subscriptions), set on the session at start by MessagingSessionBrandStamp. Read by the Concierge as a linked variable so verified context costs zero Agentforce actions.</description>
</CustomField>