force-app/main/default/objects/MessagingSession/fields/Kwitko_Cart_Token__c.field-meta.xml
<CustomField>
    <fullName>Kwitko_Cart_Token__c</fullName>
    <externalId>true</externalId>
    <label>Kwitko Cart Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>