force-app/main/default/objects/MessagingSession/fields/Kwitko_Logged_In_Email__c.field-meta.xml
<CustomField>
    <fullName>Kwitko_Logged_In_Email__c</fullName>
    <description>Verified WooCommerce account email passed through hidden pre-chat for Agentforce identity context. Blank means the shopper is not verified in the website session.</description>
    <label>Kwitko Logged In Email</label>
    <type>Email</type>
</CustomField>