force-app/main/default/objects/MessagingSession/fields/Kwitko_Logged_In_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Kwitko_Logged_In_First_Name__c</fullName>
    <description>Verified WooCommerce first name or display name passed through hidden pre-chat for Agentforce greeting context. Do not use this field as authorization by itself.</description>
    <label>Kwitko Logged In First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>